Revision history for Dist-Zilla-Plugin-Test-PodSpelling

{{$NEXT}}

2.007004  2016-10-27 02:00:39Z
          - fix tests to not rely on . in @INC (Graham Knop)

2.007003  2016-09-17 01:13:11Z
          - only add 'bin', 'lib' to directories list if a custom list was not
            passed. This also prevents a directory from being tested twice.
          - keep the stopwords list in the __DATA__ section sorted, for
            smaller diffs

2.007002  2016-05-29 04:09:13Z
          - fix broken test in MSWin32

2.007001  2016-05-27 22:59:31Z
          - remove uses of Path::Class API, to fix warnings when used with
            Dist::Zilla 6.000

2.007000  2015-10-25 01:29:05Z
          - documented the minimum timeline for removal of [PodSpellingTests]
          - include config values in metadata when [MetaConfig] is used
          - add 'directory' and 'stopword' config options as aliases for
            'directories', 'stopwords'

2.006009  2015-05-04 03:08:46Z
          - first release under new management
          - minimum supported version lowered to 5.008
          - mark Dist::Zilla::Plugin::PodSpellingTests as deprecated in metadata
          - use the 'deprecated' warning category in [PodSpellingTests]

2.006008  2014-06-17
          - register Test::Spelling as a development dependency ( haarg )

2.006007  2014-03-05
          - munge the file properly even if [ExtraTests] has already moved it

2.006006  2014-02-27
          - require Dist::Zilla 5
            Unicode Changes + 2.6.3 changes means tests only work on dzil 5+

2.006005  2014-02-23
          - Document ExtraTests problem

2.006004  2014-02-23
          - remove dependency on Path::Class in favor of Path::Tiny

2.006003  2014-02-23
        - prevent distmeta from being populated too early by postponing
          calling it until the file munging phase

2.006002  2013-12-19
          - fix problem with compile tests stalling on windows (chorny) GH #20

2.006001  2013-09-07