@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-Test-PodSpelling
 
 {{$NEXT}}
+          - Added a wordfile attribute to allow users to provide a separate
+            file for stopwords (one word per line).
 
 2.007004  2016-10-27 02:00:39Z
           - fix tests to not rely on . in @INC (Graham Knop)
